--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx parcel src/index.html",
     "build": "parcel build src/index.html --no-cache",
-    "deploy": "gh-pages -d dist "
+    "deploy": "gh-pages -d dist ",
+    "predeploy": "npm run build",
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,8 @@
   "homepage": "https://github.com/DinaMazur/parcel.progect#readme",
   "dependencies": {
     "gh-pages": "^6.3.0",
-    "parcel": "^2.14.4"
+    "parcel": "^2.14.4",
+    "parcel-reporter-clean-dist": "^1.0.4",
+    "posthtml-include": "^2.0.1"
   }
 }
