--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx parcel src/index.html",
-    "build": "parcel build src/index.html --no-cache",
+    "build": "parcel build src/index.html --no-cache -public-url /parcel-progect",
     "deploy": "gh-pages -d dist ",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
