--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "parcel.progect",
+  "homepage": " https://dinamazur.github.io/parcel-progect/",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -19,7 +20,6 @@
   "bugs": {
     "url": "https://github.com/DinaMazur/parcel.progect/issues"
   },
-  "homepage": "https://github.com/DinaMazur/parcel.progect#readme",
   "dependencies": {
     "gh-pages": "^6.3.0",
     "parcel": "^2.14.4",
