--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "parcel": "^2.14.4",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^2.0.1"
+  },
+  "devDependencies": {
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "util": "^0.12.5"
   }
 }
